# Strix

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  MANIFEST.in  click_callbacks.py  install.md  picc.py  picc_detection.py  readme.md  setup.cfg  setup.py  tmp.py
data_io/: dataio.py  dr_sl_dataset.py  picc_dataset.py
docs/: conf.py  data_io.rst  index.rst  main_entry.rst  models.cnn.engines.rst  models.cnn.rst  models.rst  modules.rst  nni_search.rst  requirements.txt
docs/source/: About Strix  About Strix.md  AboutStrix.rst  conf.py  index.rst
docs/source/Commands/: strix-check-data.rst  strix-gradcam-from-cfg.rst  strix-nni-search.rst  strix-test-from-cfg.rst  (+3 more)
medlp/: click_callbacks.py  data_checker.py  interpreter.py  main.py  main_entry.py  nni_search.py  picc_detection.py  tmp.py  tools.py
medlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
medlp/configures/: __init__.py  config.py
medlp/data_io/: __init__.py  dataio.py  dr_sl_dataset.py  generate_dataset.py  kits_dataset.py  picc_dataset.py  rjh_dataset.py  rjh_tswi_dataset.py  segmentation_dataset.py  selflearning_dataset.py
medlp/datasets/: README.md  dr_sl_dataset.py  dr_sl_datasets.py  eso_Tstaging_datasets.py  jsph_mps_datasets.py  jsph_mvi_datasets.py  jsph_nodule_datasets.py  kits_dataset.py  kits_datasets.py  lidc_datasets.py  lidc_idri_datasets.py  picc_dataset.py  picc_datasets.py  prostatex_seg.py  rjh_datasets.py  synthetic_dataset.py  test_config.yaml
medlp/misc/: nni_search_space.json  nni_template_config.yml
medlp/models/: HRNet.py  __init__.py  scnn.py
medlp/tests/: test_ContrastiveLoss.py  test_CropByLabel.py  test_RandCrop2dByPosNegLabel.py  test_TensoboardDumper.py  test_architecture.py  test_basicclassificationdataset.py  test_datamorphology.py  test_dataset_from_cfg.py  test_datasets.py  test_hesam.py  test_lidc_dataset.py  test_lidc_datasets.py  test_output_onehot_transform.py  test_picc_dcm_seg_data.py  test_picc_nii_seg_data.py  test_segnet.py  test_separateSTS.py  test_siamesedataset.py  test_swim_nii_seg.py  test_tswi_nii_cls_dataV2.py  test_tswi_nii_seg.py
medlp/utilities/: arguments.py  click.py  click_callbacks.py  click_ex.py  enum.py  handlers.py  imports.py  registry.py  transforms.py  utils.py
misc/: Genesis_Chest_CT.py  tmp.py
models/: HRNet.py.bak  __init__.py  backbone.py  losses.py  modules.py  resnet.py  retina_unet.py  scnn.py  unet2d.py  utils.py  vgg.py
source/: conf.py  index.rst
strix/: __init__.py  _version.py  data_checker.py  find_lr.py  interpreter.py  main.py  main_entry.py  nni_search.py  tools.py
strix/configures/: __init__.py  config.py  medlp_configures.cfg
strix/data_io/: __init__.py  dataio.py  generate_dataset.py
strix/datasets/: README.md  synthetic_dataset.py
strix/misc/: nni_search_space.json  strix-profile
strix/models/: __init__.py
strix/tests/: test_CenterMask2DsliceCrop.py  test_ContrastiveLoss.py  test_CropByLabel.py  test_TensoboardDumper  test_basicclassificationdataset.py  test_classification_datasets.py  test_classification_engine.py  test_click_numeric_choice.py  test_click_prompt_cond.py  test_click_remeber_last.py  test_click_second_option.py  test_data_list.py  test_dataset_from_cfg  test_datasets.py  test_freeze_network.py  test_get_unknown_options.py  test_hesam.py  test_lidc_datasets.py  test_loss_selection.py  test_output_onehot_transform.py  test_picc_nii_seg_data.py  test_project_dir.py  test_project_path.py  test_registry.py  test_segmentation_engine.py  test_selflearning_engine.py  test_separateSTS.py  test_siamesedataset  test_strixdataset.py  test_swim_nii_seg.py  test_tb_dump_image.py  test_tswi_nii_cls_dataV2.py  test_tswi_nii_seg.py  test_unlabel_register.py  test_weighted_sampling.py  test_yaml_dump.py
strix/utilities/: arguments.py  check_data_utils.py  click.py  click_callbacks.py  enum.py  generate_cohorts.py  imports.py  oyaml.py  project_loader.py  registry.py  utils.py
utilities/: __init__.py  dataio.py  handlers.py  picc_dataset.py
(+177 files in other folders)
