[metadata]
name = strix
author = Chenglong Wang
author_email = clwang@phy.ecnu.edu.cn
url = 
description = A Medical Deep Learning Platform
long_description = file:readme.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
license = GNU General Public License
license_files =
    LICENSE
project_urls =
    Documentation=https://google.com/
    Bug Tracker=https://github.com/Project-Strix/Strix/issues
    Source Code=https://github.com/Project-Strix/Strix

[options]
python_requires = >= 3.8
# for compiling and develop setup only
# no need to specify the versions so that we could
# compile for multiple targeted versions.
setup_requires =
    torch
    ninja
install_requires =
    torch>=1.7
    numpy>=1.17
    monai==0.8.0
    monai_ex==0.1.0
    tb-nightly
    click
    tqdm>=4.47.0
    scikit-image>=0.14
    scipy
    numpy
    scikit-learn
    nibabel
    pytorch-ignite==0.4.7
    utils_cw
    pyyaml
    matplotlib
    torchvision
    pillow!=8.3.0

[options.extras_require]
pandas =
    pandas
nni =
    nni
nvtx = 
    nvtx

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 120
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203
    E501
    E741
    W503
    W504
    C408
    N812  # lowercase 'torch.nn.functional' imported as non lowercase 'F'
per_file_ignores = __init__.py: F401, __main__.py: F401
exclude = *.pyi,.git,.eggs,strix/_version.py,versioneer.py,venv,.venv,_version.py

[isort]
known_first_party = strix
profile = black
line_length = 120
skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, strix/__init__.py
skip_glob = *.pyi

[versioneer]
VCS = git
style = pep440
versionfile_source = strix/_version.py
versionfile_build = strix/_version.py
tag_prefix =
parentdir_prefix =
